# bayes

./: .gitignore  README.md  app.py  main.py  pyproject.toml
pages/: demo.py
src/bayes/: __init__.py  component.py  demo.py  model.py  optimizer.py  schema.py
tests/: test.ipynb
