[project]
name = "bayes"
version = "0.1.0"
description = "Reaction conditions bayesian optimization demo"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "bofire[optimization]>=0.3.1",
    "jupyter>=1.1.1",
    "sqlmodel>=0.0.37",
    "streamlit>=1.54.0",
    "torch>=2.10.0",
]


[tool.uv.sources]
torch = [
    { index = "pytorch-cpu" }
]

[[tool.uv.index]]
url = "https://mirrors.tuna.tsinghua.edu.cn/pypi/web/simple"
default = true

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://mirrors.nju.edu.cn/pytorch/whl/cpu/"
explicit = true
